<resources>
    <string name="app_name">Наблюдатель</string>
    <string name="polling_station_text">УИК №:</string>
    <string name="new_election">Новые выборы</string>
    <string name="total_voters">Всего избирателей:</string>
    <string name="finish_election">Завершить выборы</string>
    <string name="election_finish">Завершение выборов</string>
    <string name="election_finish_confirmation">Вы действительно хотите завершить выборы?</string>
    <string name="finish_viewing">Завершить просмотр</string>
    <string name="viewing_finish">Завершение просмотра</string>
    <string name="viewing_finish_confirmation">Вы действительно хотите завершить обзор данных выборов?</string>
    <string name="election_deleting">Удаление записи</string>
    <string name="election_deleting_confirmation">Вы действительно хотите удалить запись о данных выборах?</string>
    <string name="polling_station_hint">267</string>
    <string name="total_voters_hint">2000</string>
    <string name="edit">Отредактировать</string>
    <string name="negative_counter">Число не может быть отрицательным!</string>
    <string name="id">ID</string>
    <string name="action">Действие</string>
    <string name="time">Время</string>
    <string name="total">Всего</string>
    <string name="exit">Выход</string>
    <string name="exit_confirmation">Вы действительно хотите выйти из приложения?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="election_finished">Выборы успешно завершены</string>
    <string name="voted">Проголосовало до начала наблюдения:</string>
    <string name="count">Посчитать избирателя</string>
    <string name="remove">Вычесть избирателя</string>
    <string name="voted_edit">Изменение числа проголосовавших</string>
    <string name="voted_edit_confirmation">
        Сохранить уже подсчитанных избирателей?\nДа: всего %d проголосовавших\nНет: всего %d проголосовавших
    </string>
    <string name="turnout_hours">Посмотреть явку к каждому часу</string>
    <string name="edit_official">Изменение официальных данных</string>
    <string name="edit_official_text">\nВведите число избирателей по данным комиссии</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="turnout_id">turnout_id</string>
    <string name="turnout_info">Turnout info</string>
    <string name="turnout_notification_title">Явка к этому часу</string>
    <string name="turnout_notification">Явка на %02d:%02d составила %2.2f %%</string>
    <string name="turnout_record">%d (%2.2f %%)</string>
    <string name="turnout_main_record">Явка: %2.2f %%</string>
    <string name="past_elections">Прошедшие выборы</string>
    <string name="polling_station">УИК: %d</string>
    <string name="more">Подробнее…</string>
    <string name="election_already_finished">Выборы уже завершены!</string>
    <string name="delete">Удалить</string>
    <string name="help">Помощь</string>
    <string name="next">Далее</string>
    <string name="about_app">О приложении</string>
    <string name="about_app_text"><![CDATA[
        <p align="justify">Данное приложение создано для помощи наблюдателям на выборах</p>
        <p align="justify">Связь с разработчиком:<br>
        <a href="t.me/vlasovmatvey">t.me/vlasovmatvey</a>]]>
    </string>
    <string name="observer">Наблюдатель</string>
    <string name="commission">Комиссия</string>
    <string name="training_elections">Обучающие выборы</string>
</resources>