<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="electionViewModel"
            type="ru.elections.observer.ElectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".title.TitleFragment">


        <Button
            android:id="@+id/button_new_election"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:onClick="@{() -> electionViewModel.onNewElectionButton()}"
            android:text="@string/new_election"
            app:layout_constraintBottom_toTopOf="@id/button_past_elections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintVertical_bias="0.97" />

        <Button
            android:id="@+id/button_past_elections"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/past_elections"
            android:onClick="@{() -> electionViewModel.onPastElectionsButton()}"
            app:layout_constraintBottom_toTopOf="@id/button_help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_new_election" />

        <Button
            android:id="@+id/button_help"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/help"
            app:layout_constraintBottom_toTopOf="@id/button_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_past_elections" />

        <Button
            android:id="@+id/button_about"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:layout_marginBottom="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_help" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="48sp"
            android:textColor="?attr/colorPrimaryVariant"
            android:layout_marginTop="200dp"
            app:layout_constraintBottom_toTopOf="@+id/button_new_election"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>